@@ -1,6 +1,7 @@
 Version 1.19.2 *
 ==================
 - fixed usage of ISO-8859-1 for license file paths on Windows
+- fixed unsorted files in project subfolder
 - improved license file line separator and trailing whitespaces
 
 Version 1.19.1
